# generate-recommendations

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
scripts/: example.sh
similarity/: cleanup.py  concat.py  embed.py  sanitize.py  top_generator.py
similarity/common/: files.py  reader.py  writer.py
